pl 20


pl 19.jcn5
	- interstaff beams v0: see beam-interstaff.ly and wtk1-fugue2.ly

pl 19.jcn4
	- new stem/beam parameters
	- bf: forced stem shorten

pl 19.jcn3
	- dehairification of beam code; cleanup and bugfixes
	  * stemlength
	  * forced stem shorten
	  * slope calculation
	  * damping and correction
	  * catch for silly beams: input/test/beam-suspect.ly

pl 19.jcn2
	- multi-measure-rest is now spanner SkipBars=0 is broken

pl 19.jcn1
	- hmm, almost centered whole-bar rests -- NOT

********
pl 18.jcn5
	- bf: beamtrend
	- bf: vv-duet

pl 18.mb1
         - \mark now works, using G_staff_side_item.
 	- Improved layout of multi-bar rests, including a new
 	  font symbol.

pl 18.jcn4
	- beam length adjustments
	- ugly beamtrend fix: input/test/beam-trend.ly

pl 18.jcn3
	- bf: (beamed) forced stem shorten
	- bf: broken slurs and ties; minimal slur/tie length setting ignored
	- bf: separators on cygwin

pl 18.jcn2
 	- bf: stem-length algorithm
 	- bf: beam direction algorithm
 	- bf's: wtk1-fugue2.ly

pl 18.jcn1
 	- stepmake update
 	- small fixes: spacing.ly, wtk1-fugue2-ly, violino-viola duet.
 
*******
pl 18 (jan 4 '99)

pl 17.jbr2
        - Documentation/README-W32: Brought my stuff up to date
        - Documentation/ntweb: updated for realease
        - stepmake/bin/package-zip32.sh: cygwin-b20 changes
        - scripts/ly2dvi.py: LILYPONDPREFIX fixes

pl 17.jbr1
        - scripts/ly2dvi.py root is now the shared directory path not the
          root of the lily installation.  Environment variable LILYPONDPREFIX
          is also the path to shared directory.
        - lily/main.cc WINNT conditional added to avoid a casting of 
          main_prog

pl 17.hwn1
	- bfs wtk1-fugue1
	- spacing tweak: very widely and tightly spaced lines look
better.
	- allow Beam settings to be overriden: property
	stemLeftBeamCount, stemRightBeamCount
	- junked Assoc, Assoc_iter
	- junked Graphical_element::{width,height}
	- junked Plet_swallow_engraver, Plet_engraver