@@ -12,6 +12,9 @@
 #include "note-column.hh"
 #include "paper-def.hh"
 #include "encompass-info.hh"
+#include "slur.hh"
+#include "staff-sym.hh"
+#include "debug.hh"
 
 Encompass_info::Encompass_info ()
 {
@@ -26,15 +29,15 @@ Encompass_info::Encompass_info (Note_column const* note, Direction dir)
   Real notewidth = paper->note_width () * 0.8;
   Real internote = interline / 2;
 
-  Stem* stem = note->stem_l_;
+  Stem* stem_l_ = note->stem_l_;
   /* 
     set o_.x () to middle of notehead or on the exact position of stem,
     according to slur direction
    */
-  o_.x () = stem->hpos_f ();
+  o_.x () = stem_l_->hpos_f ();
 
   /*
-     stem->dir == dir
+     stem_l_->dir == dir
                       ________
            |   |     /        \
           x|  x|       |x  |x
@@ -42,16 +45,39 @@ Encompass_info::Encompass_info (Note_column const* note, Direction dir)
 
    */
 
-  if (stem->dir_ != dir)
-    o_.x () -= 0.5 * notewidth * stem->dir_;
+  if (stem_l_->dir_ != dir)
+    o_.x () -= 0.5 * notewidth * stem_l_->dir_;
 
-  o_.y () = stem->extent (Y_AXIS)[dir];
+  o_.y () = stem_l_->extent (Y_AXIS)[dir];
   /*
    leave a gap: slur mustn't touch head/stem
    */
   o_.y () += 2.5 * internote * dir;
 
-  if (stem->dir_ != dir)
+  if (stem_l_->dir_ != dir)
     o_.y () += 1.0 * internote * dir;
-}
 
+  Slur* slur_l_ = stem_l_->slur_l_;
+  if (slur_l_->encompass_arr_.size ()
+      && stem_l_->staff_sym_l_ != slur_l_->encompass_arr_[0]->stem_l_->staff_sym_l_)
+    {
+      if (stem_l_->staff_sym_l_->dim_cache_[Y_AXIS].valid_b ())
+	{
+	  slur_l_->interstaff_f_ = stem_l_->staff_sym_l_->absolute_coordinate (Y_AXIS)
+	    - slur_l_->encompass_arr_[0]->stem_l_->staff_sym_l_->absolute_coordinate (Y_AXIS);
+	}
+      else
+	{
+	  warning (_ ("invalid dimension cache: guessing staff position"));
+	  if (slur_l_->vertical_align_drul_[MIN] != 
+	      slur_l_->vertical_align_drul_[MAX])
+	    warning (_ ("minVerticalAlign != maxVerticalAlign: interstaff slurs may be broken"));
+	  slur_l_->interstaff_f_ = slur_l_->vertical_align_drul_[MIN];
+	  // urg, guess staff order:
+	  // if our stem ends higher, our staff is probably lower...
+	  if (stem_l_->chord_start_f () > slur_l_->encompass_arr_[0]->stem_l_->chord_start_f ())
+	    slur_l_->interstaff_f_ *= -1;
+	}
+      o_.y () += slur_l_->interstaff_f_;
+    }
+}
