@@ -16,6 +16,7 @@
 #include "lookup.hh"
 #include "stem-info.hh"
 #include "beam.hh"
+#include "staff-sym.hh"
 
 Stem_info::Stem_info ()
 {
@@ -107,12 +108,23 @@ Stem_info::Stem_info (Stem*s)
   if (beam_l_->sinfo_.size ()
       && stem_l_->staff_sym_l_ != beam_l_->sinfo_[0].stem_l_->staff_sym_l_)
     {
-      // hmm, perhaps silly now to have vertical_align in Beam
-      interstaff_f_ = beam_l_->vertical_align_f_ / internote_f;
-      // urg, guess staff order:
-      // if our stem ends higher, our staff is probably lower...
-      if (idealy_f_ * beam_dir_ > beam_l_->sinfo_[0].idealy_f_ * beam_dir_)
-	interstaff_f_ *= -1;
+      if (stem_l_->staff_sym_l_->dim_cache_[Y_AXIS].valid_b ())
+	{
+	  interstaff_f_ = stem_l_->staff_sym_l_->absolute_coordinate (Y_AXIS)
+	    - beam_l_->sinfo_[0].stem_l_->staff_sym_l_->absolute_coordinate (Y_AXIS) / internote_f;
+	}
+      else
+	{
+	  warning (_ ("invalid dimension cache: guessing staff position"));
+	  if (beam_l_->vertical_align_drul_[MIN] != 
+	      beam_l_->vertical_align_drul_[MAX])
+	    warning (_ ("minVerticalAlign != maxVerticalAlign: interstaff slurs may be broken"));
+	  interstaff_f_ = beam_l_->vertical_align_drul_[MIN] / internote_f;
+	  // urg, guess staff order:
+	  // if our stem ends higher, our staff is probably lower...
+	  if (idealy_f_ * beam_dir_ > beam_l_->sinfo_[0].idealy_f_ * beam_dir_)
+	    interstaff_f_ *= -1;
+	}
       idealy_f_ += interstaff_f_ * beam_dir_;
       miny_f_ += interstaff_f_ * beam_dir_;
       maxy_f_ += interstaff_f_ * beam_dir_;
