@@ -1,3 +1,7 @@
+pl 20.jcn1
+	- interstaff slurs v0: preludes-1.ly
+	- warnings for silly interbeam settings
+
 pl 20
 
 
